# POJ-solutions

./: CMakeLists.txt  bit_model.txt  model  note.txt  post_office_1160.cpp
chapter-21-probility/: CMakeLists.txt  LightOJ1030_discovering_gold.cpp  LightOJ1079_just_another_robbery.cpp  LightOJ1104_Birthday_Paradox.cpp  Lightoj1038_race_to_1_again.cpp  a_dangerous_maze.cpp
chapter1-simple-search/: CMakeLists.txt  POJ2251_dungeon_master.cpp  POJ3278_catch_that_cow.cpp  fire_game_2150.cpp
chapter10-match/: CMakeLists.txt  HDU1083Courses.cpp  HDU2444The_Accomodation_of_Students.cpp  problem_1045_fire_net.cpp
chapter11-maximum-flow/: CMakeLists.txt  POJproblem3436_ACM_Computer_factory.cpp
chapter12_dp_1/: CMakeLists.txt  HDU1069_Monkey_and_banana.cpp  HDU_1024.txt  HDU_1024_Max_sum_plus_plus.cpp  HDU_1029_Ignatius_and_the_princess_IV.cpp  HDU_1074_Doing_Homework.cpp  HDU_1087_super_jumping.cpp  HDU_1114_piggy_bank.cpp  HDU_1160_FatMouse_Speed.cpp  HDU_1176_free_cookie.cpp  HDU_1257_interception_system.cpp  HDU_1260_Tickets.cpp  HDU_2859_phalanx.cpp  POJ3666_Making_the_Grade_DP.cpp  POJ_1458_Common_subsequence.cpp  POJ_1661_help_jimmy.cpp  POJ_3186_treats_for_the_cows.cpp
chapter22-DP-interval/: CMakeLists.txt  HDU4283_you_are_the_once.cpp  POJProblem1651-Multiplication-Puzzle.cpp  POJproblem_2955_C_Brackets.cpp
chapter4_shortest_path/: CMakeLists.txt  POJ_2387_Til_the_cows_come_home.cpp  bellman_ford_algorithm.cpp
chapter6-minimumm-weight-tree/: CMakeLists.txt  POJ1287_Networking.cpp  POJ2031_Building_a_Space_Station.cpp  POJ_1251_A_jungle_roads.cpp
chapter7-segment-tree/: CMakeLists.txt  HDU1166_troops2.cpp  HDU1754_I_Hate_(time_limited).cpp  HDU1754_I_Hate_it.cpp  POJ3468_A_simple_problem_with_integer.cpp  segment_tree_model.cpp
chapter9-critical-links/: CMakeLists.txt  POJ1236_Network_of_Schools.cpp  Uva_315_network.cpp  Uva_796_critical_links.cpp
mock_problems/: CMakeLists.txt  POJ1012_yuesefu.cpp  POJ1082CalendarGame.cpp  yuesefu_problem.cpp
