


set(fire_game_2150_SRC fire_game_2150.cpp)
add_executable(fire_game_2150 ${fire_game_2150_SRC})

set(POJ2251_dungeon_master_SRC POJ2251_dungeon_master.cpp)
add_executable(POJ2251_dungeon_master ${POJ2251_dungeon_master_SRC})

set(POJ3278_catch_that_cow_SRC POJ3278_catch_that_cow.cpp)
add_executable(POJ3278_catch_that_cow ${POJ3278_catch_that_cow_SRC})
