


set(HDU_1024_Max_sum_plus_plus_SRC HDU_1024_Max_sum_plus_plus.cpp)
add_executable(HDU_1024_Max_sum_plus_plus ${HDU_1024_Max_sum_plus_plus_SRC})

set(HDU_1029_Ignatius_and_the_princess_IV_SRC HDU_1029_Ignatius_and_the_princess_IV.cpp)
add_executable(HDU_1029_Ignatius_and_the_princess_IV ${HDU_1029_Ignatius_and_the_princess_IV_SRC})



set(HDU1069_Monkey_and_banana_SRC HDU1069_Monkey_and_banana.cpp)
add_executable(HDU1069_Monkey_and_banana ${HDU1069_Monkey_and_banana_SRC})

set(HDU_1074_Doing_Homework_SRC HDU_1074_Doing_Homework.cpp)
add_executable(HDU_1074_Doing_Homework ${HDU_1074_Doing_Homework_SRC})

set(HDU_1087_super_jumping_SRC HDU_1087_super_jumping.cpp)
add_executable(HDU_1087_super_jumping ${HDU_1087_super_jumping_SRC})

set(HDU_1114_piggy_bank_SRC HDU_1114_piggy_bank.cpp)
add_executable(HDU_1114_piggy_bank ${HDU_1114_piggy_bank_SRC})

set(HDU_1176_free_cookie_SRC HDU_1176_free_cookie.cpp)
add_executable(HDU_1176_free_cookie ${HDU_1176_free_cookie_SRC})


set(HDU_1260_Tickets_SRC HDU_1260_Tickets.cpp)
add_executable(HDU_1260_Tickets ${HDU_1260_Tickets_SRC})

set(HDU_1257_interception_system_SRC HDU_1257_interception_system.cpp)
add_executable(HDU_1257_interception_system ${HDU_1257_interception_system_SRC})

set(HDU_1160_FatMouse_Speed_SRC HDU_1160_FatMouse_Speed.cpp)
add_executable(HDU_1160_FatMouse_Speed ${HDU_1160_FatMouse_Speed_SRC})

set(POJ_1458_Common_subsequence_SRC POJ_1458_Common_subsequence.cpp)
add_executable(POJ_1458_Common_subsequence ${POJ_1458_Common_subsequence_SRC})

set(POJ_1661_help_jimmy_SRC POJ_1661_help_jimmy.cpp)
add_executable(POJ_1661_help_jimmy ${POJ_1661_help_jimmy_SRC})


set(POJ_3186_treats_for_the_cows_SRC POJ_3186_treats_for_the_cows.cpp)
add_executable(POJ_3186_treats_for_the_cows ${POJ_3186_treats_for_the_cows_SRC})

set(HDU_2859_phalanx_SRC HDU_2859_phalanx.cpp)
add_executable(HDU_2859_phalanx ${HDU_2859_phalanx_SRC})