set(POJproblem_2955_C_Brackets_SRCS POJproblem_2955_C_Brackets.cpp)
add_executable(POJproblem_2955_C_Brackets ${POJproblem_2955_C_Brackets_SRCS})

set(POJProblem1651-Multiplication-Puzzle_SRCS POJProblem1651-Multiplication-Puzzle.cpp)
add_executable(POJProblem1651-Multiplication-Puzzle ${POJProblem1651-Multiplication-Puzzle_SRCS})

