

set(POJ_2387_Til_the_cows_come_home_SRC POJ_2387_Til_the_cows_come_home.cpp)
add_executable(POJ_2387_Til_the_cows_come_home ${POJ_2387_Til_the_cows_come_home_SRC})


set(bellman_ford_algorithm_SRC bellman_ford_algorithm.cpp)
add_executable(bellman_ford_algorithm ${bellman_ford_algorithm_SRC})



set(POJ1797_Heavy_transportation_SRC POJ1797_Heavy_transportation.cpp)
add_executable(POJ1797_Heavy_transportation ${POJ1797_Heavy_transportation_SRC})


set(spfa_SRC spfa.cpp)
add_executable(spfa ${spfa_SRC})