
set(HDU1166_SRCS HDU1166_troops.cpp)
add_executable(HDU1166_troops ${HDU1166_SRCS})


set(HDU1754_I_Hate_it_SRCS HDU1754_I_Hate_it.cpp)
add_executable(HDU1754_I_Hate_it ${HDU1754_I_Hate_it_SRCS})

set(POJ3468_A_simple_problem_with_integer_SRCS POJ3468_A_simple_problem_with_integer.cpp)
add_executable(POJ3468_A_simple_problem_with_integer ${POJ3468_A_simple_problem_with_integer_SRCS})