

set(Uva_796_critical_links_SRC Uva_796_critical_links.cpp)
add_executable(Uva_796_critical_links ${Uva_796_critical_links_SRC})

set(Uva_315_network_SRC Uva_315_network.cpp)
add_executable(Uva_315_network ${Uva_315_network_SRC})

set(POJ1236_Network_of_Schools_SRC POJ1236_Network_of_Schools.cpp)
add_executable(POJ1236_Network_of_Schools ${POJ1236_Network_of_Schools_SRC})