


set(yuesefu_problem_SRCS yuesefu_problem.cpp)
add_executable(yuesefu_problem ${yuesefu_problem_SRCS})

set(POJ1012_yuesefu_SRCS POJ1012_yuesefu.cpp)
add_executable(POJ1012_yuesefu ${POJ1012_yuesefu_SRCS})

set(POJ1082CalendarGame_SRCS POJ1082CalendarGame.cpp)
add_executable(POJ1082CalendarGame ${POJ1082CalendarGame_SRCS})